# mcp-data-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  decisions.md  demo-walkthrough.md  engineering-process.md  implementation-journey.md  index.md  operations.md  production-considerations.md  project-plan.md  security-model.md  tool-reference.md  validation.md
docs/assets/: extra.css
docs/decision-records/: 0001-use-postgresql.md  0002-read-only-agent-access.md  0003-stdio-first.md
scripts/: check_docs_links.py  load_titanic.py  smoke_test.py
src/mcp_data_gateway/: __init__.py  audit.py  config.py  db.py  serialization.py  server.py
src/mcp_data_gateway/security/: __init__.py  readonly_sql.py
src/mcp_data_gateway/tools/: __init__.py  passengers.py  schema.py  stats.py
tests/: conftest.py  integration_utils.py  test_audit.py  test_config.py  test_db_connection.py  test_load_titanic.py  test_passengers.py  test_readonly_sql.py  test_serialization.py  test_server.py  test_smoke_test.py  test_stats.py  test_tools.py
